# cogniplexity

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  cogniplexity
.github/workflows/: ci.yml  release.yml
include/: cli_arguments.cpp  cli_arguments.h  cli_helpers.h  cognitive_complexity.h  config.h  file_operations.h  gitignore.h  gsg.h  output.h  sourcing.h
include/builders/: c_gsg_builder.h  javascript_gsg_builder.h  python_gsg_builder.h
scripts/: build.sh  clang_tidy.sh
src/: cli_arguments.cpp  cognitive_complexity.cpp  config.cpp  file_operations.cpp  gitignore.cpp  main.cpp  output.cpp  sourcing.cpp
src/builders/: c_gsg_builder.cpp  javascript_gsg_builder.cpp  python_gsg_builder.cpp
tests/: test_complexity.cpp
tests/src/c/: test_if.c
tests/src/cpp/: test_ctor_dtor.cpp  test_if.cpp  test_lambda.cpp  test_method_out_of_class.cpp  test_operator.cpp  test_template_free.cpp  test_template_method.cpp  test_template_out_of_class.cpp
tests/src/javascript/: test_if.js  test_switch_ternary.js
tests/src/python/: test_try_nested.py  test_while.py
tests/src/typescript/: test_if.ts
